// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/modal/DialogModal.vue > snapshot test > { message: 'Information', variant: 'info' } rendars collectly 1`] = `
<form
  action=""
  data-v-a1224d8a=""
>
  <div
    class="modal-card"
    data-v-a1224d8a=""
    style="width: auto;"
  >
    <header
      class="modal-card-head is-info"
      data-v-a1224d8a=""
    >
      <p
        class="modal-card-title"
        data-v-a1224d8a=""
      />
      <button
        class="button is-info"
        data-v-a1224d8a=""
        icon="delete"
        id="canceled"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </span>
      </button>
    </header>
    <section
      class="modal-card-body"
      data-v-a1224d8a=""
    >
      <p
        data-v-a1224d8a=""
      >
        Information
      </p>
    </section>
    <footer
      class="modal-card-foot"
      data-v-a1224d8a=""
    >
      <button
        class="button is-primary"
        data-v-a1224d8a=""
        id="yes"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <!--v-if-->
          <span
            class=""
          >
            
             Yes 
            
          </span>
          <!--v-if-->
        </span>
      </button>
      <button
        class="button"
        data-v-a1224d8a=""
        id="no"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <!--v-if-->
          <span
            class=""
          >
            
            No
            
          </span>
          <!--v-if-->
        </span>
      </button>
    </footer>
  </div>
</form>
`;

exports[`components/modal/DialogModal.vue > snapshot test > { message: 'Message Only' } rendars collectly 1`] = `
<form
  action=""
  data-v-a1224d8a=""
>
  <div
    class="modal-card"
    data-v-a1224d8a=""
    style="width: auto;"
  >
    <header
      class="modal-card-head is-primary"
      data-v-a1224d8a=""
    >
      <p
        class="modal-card-title"
        data-v-a1224d8a=""
      />
      <button
        class="button is-primary"
        data-v-a1224d8a=""
        icon="delete"
        id="canceled"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </span>
      </button>
    </header>
    <section
      class="modal-card-body"
      data-v-a1224d8a=""
    >
      <p
        data-v-a1224d8a=""
      >
        Message Only
      </p>
    </section>
    <footer
      class="modal-card-foot"
      data-v-a1224d8a=""
    >
      <button
        class="button is-primary"
        data-v-a1224d8a=""
        id="yes"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <!--v-if-->
          <span
            class=""
          >
            
             Yes 
            
          </span>
          <!--v-if-->
        </span>
      </button>
      <button
        class="button"
        data-v-a1224d8a=""
        id="no"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <!--v-if-->
          <span
            class=""
          >
            
            No
            
          </span>
          <!--v-if-->
        </span>
      </button>
    </footer>
  </div>
</form>
`;

exports[`components/modal/DialogModal.vue > snapshot test > { title: 'Error!', message: 'Description', variant: 'error' } rendars collectly 1`] = `
<form
  action=""
  data-v-a1224d8a=""
>
  <div
    class="modal-card"
    data-v-a1224d8a=""
    style="width: auto;"
  >
    <header
      class="modal-card-head is-error"
      data-v-a1224d8a=""
    >
      <p
        class="modal-card-title"
        data-v-a1224d8a=""
      >
        Error!
      </p>
      <button
        class="button is-error"
        data-v-a1224d8a=""
        icon="delete"
        id="canceled"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </span>
      </button>
    </header>
    <section
      class="modal-card-body"
      data-v-a1224d8a=""
    >
      <p
        data-v-a1224d8a=""
      >
        Description
      </p>
    </section>
    <footer
      class="modal-card-foot"
      data-v-a1224d8a=""
    >
      <button
        class="button is-primary"
        data-v-a1224d8a=""
        id="yes"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <!--v-if-->
          <span
            class=""
          >
            
             Yes 
            
          </span>
          <!--v-if-->
        </span>
      </button>
      <button
        class="button"
        data-v-a1224d8a=""
        id="no"
        type="button"
      >
        <span
          class="button-wrapper"
        >
          <!--v-if-->
          <span
            class=""
          >
            
            No
            
          </span>
          <!--v-if-->
        </span>
      </button>
    </footer>
  </div>
</form>
`;
